# polymath

./: .env.example  .gitignore  AGENTS.md  CHUNK_MIGRATION_SPOT_CHECK.md  EVIDENCE_EXTRACTION_PLAN.md  EVIDENCE_HARDENING_STATUS.md  KB_V2_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUALITY_CHECK_2026_01_07.md  README.md  SESSION_SUMMARY_2026_01_07.md  SYSTEM_DEPENDENCIES.md  codex_tools.py  config.toml  polymath_cli.py  pyproject.toml  requirements.txt  setup.py
apps/: polymath_explorer.py
data/: migration_checkpoint.json
docs/: ACADEMIC_PLAYBOOK.md  BACKUP_RESTORE_PROCEDURES.md  CONCEPT_EXTRACTION_STATUS.md  CONSISTENCY_MODEL.md  HACKATHON_PLAYBOOK.md  KB_MIGRATION_V2.md  PASSAGE_MIGRATION_SAFETY.md  POLYMATH_USER_MANUAL.md  REVIEW_RESPONSES.md  SEMANTICSCHOLAR_INTEGRATION.md  github_repos_inventory.md
lib/: citation_builder.py  citation_verifier.py  code_ingest.py  code_search.py  config.py  db.py  doc_identity.py  dual_stream_ingest.py  enhanced_pdf_parser.py  evidence_extractor.py  formalism_template.py  gemini_batch.py  graph_bridge_search.py  haiku_extractor.py  hybrid_bridge_search.py  hybrid_search.py  hybrid_search_v2.py  hyde_bridge_search.py  kb_derived.py  local_extractor.py  polymathic_search.py  pqe_response_generator.py  pqe_validator.py  rosetta_query_expander.py  tautology_checker.py  text_quality.py  unified_ingest.py
mcp/: __init__.py  neo4j_server.py  polymath_mcp.py  rag_server.py
schema/: autopilot_schema.sql  neo4j_constraints.cypher  phase0_passages.sql  phase1_document_registry.sql  postgres_schema.sql
scripts/: README_concept_linking.md  audit_repo_ingestion.py  backfill_chunk_concepts_llm.py  backfill_metadata.py  backfill_passage_concepts_gemini_batch.py  backfill_simple.py  (+78 more)
(+65 files in other folders)
